test/should-fail/vsgc379start.f3
/*
 * @test/compile-error
 */
var nonNumericStart = ["a"..42];
